--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/11/2020 02:54:00 PM</p>
+    <p class="lastupdate">09/11/2020 02:59:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">78.4&#176;F</td>
+        <td class="data">78.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">78.4&#176;F</td>
+        <td class="data">78.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">78.4&#176;F</td>
+        <td class="data">78.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.4&#176;F</td>
+        <td class="data">51.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.962 inHg (-0.078)</td>
+        <td class="data">29.960 inHg (-0.077)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph SE (135&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">73.7&#176;F</td>
+        <td class="data">73.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:52:54 PM">
-            78.4</span><br/>
+          <span title="02:58:02 PM">
+            78.8</span><br/>
           <span title="06:21:27 AM">
             48.2</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:52:54 PM" class="hival">
-            78.4</span>
+          <span title="02:58:02 PM" class="hival">
+            78.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:04:49 AM">
             88</span><br/>
-          <span title="02:34:46 PM">
-            39</span>
+          <span title="02:57:50 PM">
+            38</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:04:49 AM (Friday)">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:56:01 AM">
             30.059</span><br/>
-          <span title="02:51:02 PM">
-            29.961</span>
+          <span title="02:58:02 PM">
+            29.960</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:56:01 AM (Friday)">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:41:02 PM">
-            73.7</span><br/>
+          <span title="02:54:02 PM">
+            73.8</span><br/>
           <span title="07:27:01 AM">
             70.9</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 0 hours, 7 minutes</td>
+      <td class="data">10 days, 0 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 0 hours, 7 minutes</td>
+      <td class="data">10 days, 0 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
