--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/11/2020 03:29:00 PM</p>
+    <p class="lastupdate">09/11/2020 03:34:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">80.2&#176;F</td>
+        <td class="data">80.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">80.2&#176;F</td>
+        <td class="data">80.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">80.2&#176;F</td>
+        <td class="data">80.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.5&#176;F</td>
+        <td class="data">51.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">37%</td>
+        <td class="data">36%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.954 inHg (-0.070)</td>
+        <td class="data">29.953 inHg (-0.070)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph WSW (248&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:28:26 PM">
-            80.2</span><br/>
+          <span title="03:33:14 PM">
+            80.4</span><br/>
           <span title="06:21:27 AM">
             48.2</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="03:28:26 PM" class="hival">
-            80.2</span>
+          <span title="03:33:14 PM" class="hival">
+            80.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:04:49 AM">
             88</span><br/>
-          <span title="03:09:48 PM">
-            37</span>
+          <span title="03:29:26 PM">
+            36</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:04:49 AM (Friday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          156
+          155
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 0 hours, 42 minutes</td>
+      <td class="data">10 days, 0 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 0 hours, 42 minutes</td>
+      <td class="data">10 days, 0 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
